--- a/package.json
+++ b/package.json
@@ -4,17 +4,12 @@
   "private": true,
   "dependencies": {
     "aws-sdk": "^2.395.0",
-    "html2canvas": "^1.0.0-alpha.12",
-    "ipfs-api": "^24.0.2",
-    "jspdf": "^1.5.3",
     "react": "^16.5.2",
     "react-csv": "^1.0.19",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-router-scroll": "^0.4.4",
-    "react-scripts": "2.0.3",
-    "web3": "^1.0.0-beta.43",
-    "web3-eth": "^1.0.0-beta.37"
+    "react-scripts": "2.0.3"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
