--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "acorn": "^6.1.0",
     "aws-sdk": "^2.395.0",
+    "firebase": "^5.8.4",
     "react": "^16.5.2",
     "react-csv": "^1.0.19",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-router-scroll": "^0.4.4",
-    "react-scripts": "2.0.3"
+    "react-scripts": "2.0.3",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
