--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
     "react-router-scroll": "^0.4.4",
-    "react-scripts": "2.0.3",
+    "react-scripts": "^2.1.5",
     "recompose": "^0.30.0"
   },
   "scripts": {
