--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "acorn": "^6.1.0",
     "aws-sdk": "^2.395.0",
     "firebase": "^5.8.4",
+    "font-awesome": "^4.7.0",
     "react": "^16.5.2",
     "react-csv": "^1.0.19",
     "react-dom": "^16.5.2",
