--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "acorn": "^6.1.0",
     "aws-sdk": "^2.395.0",
+    "axios": "^0.18.0",
     "firebase": "^5.8.4",
     "font-awesome": "^4.7.0",
     "react": "^16.5.2",
